# ZLibYuv

./: build.gradle  jitpack.yml  settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/androidTest/java/com/zhengsr/livyuvdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zhengsr/livyuvdemo/: BitmapUtil.java  MainActivity.kt
app/src/main/res/layout/: layout_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/zhengsr/livyuvdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libyuv/: build.gradle  jitpack.yml
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libyuv/src/main/cpp/libyuv/include/: jnilog.h  libyuv.h
libyuv/src/main/java/com/zhengsr/libyuv/: ZYuvTools.kt
libyuv/src/test/java/com/zhengsr/libyuv/: ExampleUnitTest.kt
